# hello-daslang

./: AGENTS.md  CMakeLists.txt  README.md  double3-aot-sandbox-build-windows.md  double3-aot-sandbox-report.md  reports_double3_aot_benchmark.md
projects/double3-aot-sandbox/: CMakeLists.txt
projects/double3-aot-sandbox/scripts/: double3_demo.das
projects/double3-aot-sandbox/src/: double3_aot_tool.cpp  double3_bindings.h  double3_module.cpp  double3_module.h  main.cpp
projects/double3cpp-aot-sandbox/: CMakeLists.txt
projects/double3cpp-aot-sandbox/scripts/: double3cpp_demo.das
projects/double3cpp-aot-sandbox/src/: double3_aot_tool.cpp  double3_bindings.h  double3_module.cpp  double3_module.h  main.cpp
projects/hot-rload-sandbox/: CMakeLists.txt
projects/hot-rload-sandbox/scripts/: hotreload_tick.das
projects/hot-rload-sandbox/src/: main.cpp
scripts/: hello.das  hotreload_tick.das
src/: main.cpp
