cmake_minimum_required(VERSION 3.20)
project(hello_daslang_workspace LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(MSVC)
    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
endif()

find_package(Threads REQUIRED)

set(HELLO_DASLANG_REPO_ROOT "${CMAKE_CURRENT_SOURCE_DIR}")
set(HELLO_DASLANG_DAS_ROOT "${HELLO_DASLANG_REPO_ROOT}/vendor/daScript")

if(NOT EXISTS "${HELLO_DASLANG_DAS_ROOT}/CMakeLists.txt")
    message(FATAL_ERROR "vendor/daScript was not found")
endif()

set(DAS_FLEX_BISON_DISABLED ON CACHE BOOL "" FORCE)
set(DAS_CLANG_BIND_DISABLED ON CACHE BOOL "" FORCE)
set(DAS_LLVM_DISABLED ON CACHE BOOL "" FORCE)
set(DAS_HV_DISABLED ON CACHE BOOL "" FORCE)
set(DAS_GLFW_DISABLED ON CACHE BOOL "" FORCE)
set(DAS_AUDIO_DISABLED ON CACHE BOOL "" FORCE)
set(DAS_STDDLG_DISABLED ON CACHE BOOL "" FORCE)
set(DAS_STBIMAGE_DISABLED ON CACHE BOOL "" FORCE)
set(DAS_PUGIXML_DISABLED ON CACHE BOOL "" FORCE)
set(DAS_SQLITE_DISABLED ON CACHE BOOL "" FORCE)
set(DAS_TOOLS_DISABLED OFF CACHE BOOL "" FORCE)
set(DAS_TREE_SITTER_DISABLED ON CACHE BOOL "" FORCE)
set(DAS_AOT_EXAMPLES_DISABLED OFF CACHE BOOL "" FORCE)
set(DAS_TUTORIAL_DISABLED ON CACHE BOOL "" FORCE)
set(DAS_TESTS_DISABLED ON CACHE BOOL "" FORCE)

add_subdirectory("${HELLO_DASLANG_DAS_ROOT}" "${CMAKE_BINARY_DIR}/vendor/daScript")
add_subdirectory(projects/hot-rload-sandbox)
add_subdirectory(projects/double3-aot-sandbox)
